css/custom.css
@font-face {
    font-family: Univers;
    src: url('../fonts/UniversLTStd-Cn.otf');
}

@font-face {
    font-family: Fleurie Plus;
    src: url(../fonts/fleurieplus.ttf);
}

@font-face {
    font-family: Bureau Agency;
    src: url(../fonts/bureauagency.otf);
}

.bgblack {
	background-color: #312f30;
}

.bgtree {
	background-image: url(../img/bgtree2.png);
	background-repeat:no-repeat;
	background-size: cover;
}

p {
	font-size: 1.1em;
}

.textgiant {
	font-size: 3em;
}

.textlarge {
	font-size: 2.3em;
}

.textmedium {
	font-size: 1.75em;
}

.textsmall {
	font-size: 1.2em;
}

.texttiny {
	font-size: 0.8em;
}

.fontskinny {
	font-weight: 100;
}

h1 {
	line-height: 1;
	margin-bottom: 0;
}

h2 {
	position: relative;
	top: -30px;
}

.spacecloser {
	margin-bottom: 0;
	padding-bottom: 0;
}

.font-bureau {
	font-family: Bureau Agency;
}

.font-fleurie {
	font-family: Fleurie Plus;
}

.font-univers {
	font-family: Univers;
}

.textwhite {
	color: #fff;
}

.textorange {
	color: #F5851F;
}

.textlightgrey {
	color: #ccc;
}

.smallcaps {
	font-variant:small-caps;
}

.allcaps {
	text-transform: uppercase;
}

.panel {
	background-color: #ccc;
	background-color: rgba(204, 204, 204, 0.7);

}

.panel.radius {
	-webkit-border-radius: 7px;
			border-radius: 7px;
			border: none;
}

.alert {
	color: #cc0000;
	font-weight: bold;
}

.bgorange {
	background-color: #F5851F;
}

.borderorange {
	border-color: #f79d4b;
}

.button:hover {
	background-color: #f79439;
}

.portrait {
	border-radius: 7px;
	display: inline;
}

.leftspacer {
	padding-left: 5%;
}

ul {
	list-style-type: none;
}

.link {
	color: #50A6C2;
}

.link:hover {
	color: #7fd3ed;
}

.link:before {
	content: "> ";
}

.chmlogo {
	width: 50%;
}

.row.l-topbar {
	margin-top: 3%;
	margin-bottom: 2%;
}

.sponsorlogo {
	margin-top: 2%;
	margin-bottom: 6%;
	width: 45%;
}

footer {
	padding-bottom: 10%;
}

.pricespace {
	margin-bottom: .5em;
}

.datespace {
	position: relative;
	top: -50px;
}

@media all and (max-width: 630px) {
	.chmlogo {
		margin-top: 3%;
		margin-bottom: 2%;
		width: 70%;
	}
}

@media all and (max-width: 768px) {

}

@media all and (max-width: 320px) {

}

@media all and (max-width: 480px) {

}

